--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
 
                     <div class="flex space-x-4 mb-4">
                         <div class="w-1/2">
-                            <label class="text-[10px] font-bold text-slate-400 uppercase tracking-wider">Target Kering (Kg)</label>
-                            <input type="number" step="0.01" id="beratKering" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-3 font-bold text-teal-700 text-xl focus:ring-2 focus:ring-teal-500 outline-none transition" placeholder="..." required oninput="hitungOtomatis()">
+                            <label class="text-[10px] font-bold text-slate-400 uppercase tracking-wider leading-tight">Berat Kering HD Sebelumnya (Kg)</label>
+                            <input type="number" step="0.01" id="beratKering" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-3 font-bold text-teal-700 text-xl focus:ring-2 focus:ring-teal-500 outline-none transition mt-1" placeholder="..." required oninput="hitungOtomatis()">
                         </div>
                         <div class="w-1/2">
-                            <label class="text-[10px] font-bold text-slate-400 uppercase tracking-wider">Berat Datang (Kg)</label>
-                            <input type="number" step="0.01" id="beratBasah" class="w-full bg-white border-2 border-orange-200 rounded-xl p-3 font-bold text-orange-600 text-xl focus:ring-2 focus:ring-orange-500 outline-none transition" placeholder="..." required oninput="hitungOtomatis()">
+                            <label class="text-[10px] font-bold text-slate-400 uppercase tracking-wider leading-tight">Berat Datang / Basah (Kg)</label>
+                            <input type="number" step="0.01" id="beratBasah" class="w-full bg-white border-2 border-orange-200 rounded-xl p-3 font-bold text-orange-600 text-xl focus:ring-2 focus:ring-orange-500 outline-none transition mt-1" placeholder="..." required oninput="hitungOtomatis()">
                         </div>
                     </div>
 
@@ -129,8 +129,8 @@
                         <thead class="text-[10px] text-slate-400 uppercase bg-slate-50 border-b">
                             <tr>
                                 <th class="px-2 py-3 font-bold">Tgl</th>
-                                <th class="px-2 py-3 font-bold">BK</th>
-                                <th class="px-2 py-3 font-bold">BB</th>
+                                <th class="px-2 py-3 font-bold">BK Lalu</th>
+                                <th class="px-2 py-3 font-bold">BB Datang</th>
                                 <th class="px-2 py-3 font-bold text-right">UF</th>
                             </tr>
                         </thead>
