--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Masuk dengan Google
             </button>
         </div>
-        <p class="text-teal-200 text-[10px] mt-8 opacity-60">Powered by Inferno-X Technology</p>
+        <p class="text-teal-200 text-[10px] mt-8 opacity-60">Powered by Inferno-X</p>
     </div>
 
     <div id="mainApp" class="hidden min-h-screen flex flex-col">
@@ -53,7 +53,7 @@
 
             <div class="bg-white p-5 rounded-2xl shadow-md mb-6 border border-slate-100">
                 <div class="flex justify-between items-center border-b pb-3 mb-4">
-                    <h2 class="text-lg font-bold text-teal-700">Kalkulator Cerdas</h2>
+                    <h2 class="text-lg font-bold text-teal-700">Hemocare</h2>
                     <span id="tglHariIni" class="text-xs bg-teal-100 text-teal-800 px-2 py-1 rounded-full font-bold"></span>
                 </div>
                 
@@ -449,3 +449,4 @@
     </script>
 </body>
 </html>
+
