--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Masuk dengan Google
             </button>
         </div>
-        <p class="text-teal-200 text-[10px] mt-8 opacity-60">Powered by Inferno-X Technology</p>
+        <p class="text-teal-200 text-[10px] mt-8 opacity-60">Powered by Inferno-X</p>
     </div>
 
     <div id="mainApp" class="hidden min-h-screen flex flex-col">
@@ -53,7 +53,7 @@
 
             <div class="bg-white p-5 rounded-2xl shadow-md mb-6 border border-slate-100">
                 <div class="flex justify-between items-center border-b pb-3 mb-4">
-                    <h2 class="text-lg font-bold text-teal-700">Kalkulator Cerdas</h2>
+                    <h2 class="text-lg font-bold text-teal-700">HemoCare</h2>
                     <span id="tglHariIni" class="text-xs bg-teal-100 text-teal-800 px-2 py-1 rounded-full font-bold"></span>
                 </div>
                 
@@ -77,7 +77,7 @@
 
                     <div class="flex space-x-4 mb-3">
                         <div class="w-1/2">
-                            <label class="text-[10px] font-bold text-slate-400 uppercase tracking-wider leading-tight">BK Sebelumnya</label>
+                            <label class="text-[10px] font-bold text-slate-400 uppercase tracking-wider leading-tight">Berat Kering Sebelumnya</label>
                             <input type="number" step="0.01" id="beratKering" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-3 font-bold text-teal-700 text-xl focus:ring-2 focus:ring-teal-500 outline-none transition mt-1" placeholder="..." required oninput="hitungOtomatis()">
                         </div>
                         <div class="w-1/2">
@@ -488,3 +488,4 @@
     </script>
 </body>
 </html>
+
