--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 Masuk dengan Google
             </button>
         </div>
-        <p class="text-teal-200 text-[10px] mt-8 opacity-60">Powered by Inferno-X Technology</p>
+        <p class="text-teal-200 text-[10px] mt-8 opacity-60">Powered by Inferno-X</p>
     </div>
 
     <div id="mainApp" class="hidden min-h-screen flex flex-col">
@@ -81,7 +81,7 @@
                         
                         <div class="flex space-x-3 mb-3">
                             <div class="w-1/2">
-                                <label class="text-[10px] font-bold text-slate-400 uppercase">BK Sebelumnya</label>
+                                <label class="text-[10px] font-bold text-slate-400 uppercase">Berat Kering Sebelumnya</label>
                                 <input type="number" step="0.01" id="beratKering" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-2 font-bold text-teal-700 text-lg mt-1" required oninput="hitungOtomatis()">
                             </div>
                             <div class="w-1/2">
@@ -418,3 +418,4 @@
     </script>
 </body>
 </html>
+
