--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                     <div class="flex space-x-3 mb-4">
                         <div class="w-1/2">
-                            <label class="text-[10px] font-bold text-slate-400 uppercase">BK Sebelumnya</label>
+                            <label class="text-[10px] font-bold text-slate-400 uppercase">Berat Kering Sebelumnya</label>
                             <input type="number" step="0.01" id="beratKering" class="w-full bg-slate-50 border border-slate-200 rounded-xl p-2 font-bold text-teal-700 text-lg mt-1" required oninput="hitungOtomatis()">
                         </div>
                         <div class="w-1/2">
@@ -550,3 +550,4 @@
     </script>
 </body>
 </html>
+
