--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hemocare by Inferno-X</title>
+    <title>Hemocare by Inferno</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -43,7 +43,7 @@
                 Masuk dengan Google
             </button>
         </div>
-        <p class="text-teal-100/60 text-xs mt-8">© 2025 Inferno-X Technology</p>
+        <p class="text-teal-100/60 text-xs mt-8">©2025 Inferno</p>
     </div>
 
     <div id="mainApp" class="hidden min-h-screen flex flex-col max-w-md mx-auto bg-white shadow-xl fade-in">
@@ -655,3 +655,4 @@
     </script>
 </body>
 </html>
+
